<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_question"
        android:text="@string/question_six"/>

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="250dp"
        android:layout_width="300dp"
        android:id="@+id/imageView1"
        app:riv_corner_radius="20dip"
        app:riv_border_width="2dip"
        app:riv_border_color="#333333"
        app:riv_mutate_background="true"
        app:riv_tile_mode="repeat"
        app:riv_oval="false"
        android:layout_margin="3dp"
        android:layout_gravity="center"
        android:src="@drawable/captainsarmband"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_six_option_A"
        android:id="@+id/checkbox_a"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_six_option_B"
        android:id="@+id/checkbox_b"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_six_option_C"
        android:id="@+id/checkbox_c"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_select"
        android:text="@string/button_select"
        android:layout_gravity="center"
        />

</LinearLayout>
</ScrollView>